redis.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: easygo
  labels:
    name: redis
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      name: redis
      labels:
        name: redis
    spec:
      containers:
        - name: redis
          image: sameersbn/redis
          imagePullPolicy: IfNotPresent
          ports:
            - name: redis
              containerPort: 6379
          volumeMounts:
            - mountPath: /var/lib/redis
              name: data
          livenessProbe:
            exec:
              command:
                - redis-cli
                - ping
            initialDelaySeconds: 30
            timeoutSeconds: 5
          readinessProbe:
            exec:
              command:
                - redis-cli
                - ping
            initialDelaySeconds: 5
            timeoutSeconds: 1
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: redis-claim
  selector:
    matchLabels:
      name: redis

---

apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: easygo
  labels:
    name: redis
spec:
  type: NodePort
  ports:
    - name: redis
      port: 6379
      targetPort: redis
      nodePort: 30079
  selector:
    name: redis
